--- a/tsconfig.json
+++ b/tsconfig.json
@@ -110,6 +110,10 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
+    "paths": {
+      "@prisma/client": ["./node_modules/@prisma/client"],
+      "generated/prisma-client": ["./src/generated/prisma-client/index"]
+    }
   }
 }
