--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.10.1",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
+    "@types/express-validator": "^2.20.33",
     "@types/node": "^24.0.4",
     "@types/uuid": "^10.0.0",
     "prisma": "^6.10.1",
@@ -22,6 +23,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "uuid": "^11.1.0"
   },
   "description": ""
