--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/express-validator": "^2.20.33",
+    "@types/helmet": "^0.0.48",
     "@types/node": "^24.0.4",
     "@types/uuid": "^10.0.0",
     "prisma": "^6.10.1",
@@ -29,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "uuid": "^11.1.0"
   },
