--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "devDependencies": {
     "@prisma/client": "^6.10.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/express-validator": "^2.20.33",
     "@types/helmet": "^0.0.48",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.4",
     "@types/uuid": "^10.0.0",
     "prisma": "^6.10.1",
@@ -27,11 +29,13 @@
   "dependencies": {
     "@types/joi": "^17.2.2",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "uuid": "^11.1.0"
   },
   "description": ""
